Fixed content overflow on menu page on small devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,19 @@ body {
     }
   }
 
+/*menu*/
+@media #{$small-and-down} {
+    .card.large {
+      height: auto;
+    }
+    .card.large .card-content {
+      height: auto;
+    }
+    .card.large .card-action {
+      position: relative;
+    }
+  }
+
 
 
 
